# godsays

./: .dockerignore  .editorconfig  Cargo.toml  Happy.TXT  LICENSE  README.md
.github/workflows/: docker.yml  release.yml
docker/cli/: Dockerfile
docker/server/: Dockerfile
src/: lib.rs  main.rs
