[package]
name = "godsays"
version = "0.1.4"
description = "Rust port of the programmer Terry Davis' (RIP) \"god says\" program"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/orhun/godsays"
repository = "https://github.com/orhun/godsays"
keywords = ["templeos"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "Happy.TXT"]
edition = "2021"
default-run = "godsays"

[features]
server = ["hyper", "tokio", "pretty_env_logger"]

[dependencies]
fastrand = "1.8.0"
rust-embed = "6.4"
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
pretty_env_logger = { version = "0.4", optional = true }

[[bin]]
name = "godsays-server"
path = "src/bin/server.rs"
required-features = ["server"]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
